--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
 
             </nav>
-            <h3 class="text-muted">Bookmark Library<i class="fa-solid fa-book-bookmark"></i></h3>
+            <h3 class="text-muted">Библиотека закладок<i class="fa-solid fa-book-bookmark"></i></h3>
         </div>
 
         <div class="jumbotron">
